[package]
name = "tapl-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
lalrpop-util = { version = "0.19.7", features = [ "lexer" ] }
lexgen = "0.10.0"
lexgen_util = "0.10.0"
rustyline = "9.1.2"
thiserror = "1.0.30"

[build-dependencies]
lalrpop = "0.19.7"
